Criação das tabelas

--- a/tabelas-listas-frames-formularios/tabelas/tabelas.html
+++ b/tabelas-listas-frames-formularios/tabelas/tabelas.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="">
     <title>Notas</title>
 </head>
 <body>
-    <div class="principal">
-        <div class="1-bi">
+    <div class="container">
+        <div class="primeirobi">
             <table border="1">
+                <caption>Resultados do 1º bimestre</caption>
                 <tr>
-                    <th>Resultados</th>
+                    <th colspan="4">Resultados</th>
                 </tr>
                 <tr>
                     <td>Aluno</td>
@@ -33,16 +35,18 @@
                 </tr>
                 <tr>
                     <td>Carlos</td>
-                    <td>Trancado</td>
+                    <td colspan="3">Trancado</td>
                 </tr>
             </table>
         </div>
 
-        <div class="2-bi">
-            <table>
+        <div class="segundobi" >
+            <table border="1">
+                <caption>Resultados do 2º bimestre</caption>
                 <tr>
-                    <td>Português</td>
-                    <td>Matemática</td>
+                    <td colspan="2"></td>
+                    <th colspan="2">Português</th>
+                    <th colspan="2">Matemática</th>
                 </tr>
                 <tr>
                     <td>Situação</td>
@@ -51,6 +55,21 @@
                     <td>Nota 2</td>
                     <td>Nota 1</td>
                     <td>Nota 2</td>
+                </tr>
+                <tr>
+                    <td rowspan="2">Matriculado</td>
+                    <td>Alan</td>
+                    <td>9,0</td>
+                    <td>8,0</td>
+                    <td>9,5</td>
+                    <td>8,5</td>
+                </tr>
+                <tr>
+                    <td>Bruno</td>
+                    <td>8,5</td>
+                    <td>9,5</td>
+                    <td>8,0</td>
+                    <td>9,0</td>
                 </tr>
             </table>
         </div>
