--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div>
-        <a href="cadastro/index.html"></a>
-        <a href="tabelas-listas-frames-formularios/index.html"></a>
+        <a href="cadastro/index.html">cadastro</a>
+        <a href="tabelas-listas-frames-formularios/index.html">tabelas-listas-frames-formularios</a>
     </div>
 </body>
 </html>
