Organizando os links

--- a/tabelas-listas-frames-formularios/formulario/index.html
+++ b/tabelas-listas-frames-formularios/formulario/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Tabelas-Listas-Frames-Formularios</title>
+    <title>Formulário</title>
 </head>
 <body>
     <div>
         <ul>
-            <li><a href="cadastro/index.html">cadastro</a></li>
-            <li><a href="tabelas-listas-frames-formularios/index.html">tabelas-listas-frames-formularios</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="contato.html">Contato</a></li>
+            <li><a href="solicitacao.html">Solicitacao</a></li>
         </ul>
     </div>
 </body>
