--- a/tabelas-listas-frames-formularios/formulario/solicitacao.html
+++ b/tabelas-listas-frames-formularios/formulario/solicitacao.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Solicitação</title>
 </head>
 <body>
-    <form action="#">
-        <label for="name">Nome</label>
-        <input type="text" id="name" placeholder="Nome" required>
-
-        <label for="year">Ano</label>
-        <input type="number" size="4" id="year" placeholder="Ano" required>
-    </form>
+    <div class="solicitacao">
+        <form action="#">
+            <label for="name">Nome</label>
+            <input type="text" id="name" placeholder="Nome" required>
+            
+            <label for="year">Ano</label>
+            <input type="number" size="4" id="year" placeholder="Ano" required>
+        </form>
+    </div>
 </body>
 </html>
