--- a/tabelas-listas-frames-formularios/frames/investidor/manual-do-investidor.html
+++ b/tabelas-listas-frames-formularios/frames/investidor/manual-do-investidor.html
@@ -7,6 +7,11 @@
     <title>Manual do Investidor</title>
 </head>
 <body>
-    
+    <iframe src="https://christianosantos.com/files/cs1/manual-do-investidor/pagina-01.html" name="iframeLinks" height="500px" width="1000px" title="Iframe Example"></iframe>
+
+    <p><a href="https://christianosantos.com/files/cs1/manual-do-investidor/pagina-01.html" target="iframeLinks">Gastar, poupar ou investir?</a></p>
+    <p><a href="https://christianosantos.com/files/cs1/manual-do-investidor/pagina-02.html" target="iframeLinks">Renda fixa ou variável?</a></p>
+    <p><a href="https://christianosantos.com/files/cs1/manual-do-investidor/pagina-03.html" target="iframeLinks">Conhecendo o seu perfil de investidor</a></p>
+    <p><a href="https://christianosantos.com/files/cs1/manual-do-investidor/pagina-04.html" target="iframeLinks">Planejamento financeiro</a></p>
 </body>
 </html>
