--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="cadastro/index.html">cadastro</a></li>
             <li><a href="tabelas-listas-frames-formularios/index.html">tabelas-listas-frames-formularios</a></li>
+            <li><a href="curriculo/index.html">currículo</a></li>
         </ul>
     </div>
 </body>
