--- a/tabelas-listas-frames-formularios/frames/index.html
+++ b/tabelas-listas-frames-formularios/frames/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Frames</title>
 </head>
 <body>
-    <div class="linksAI">
+    <div>
         <ul>
             <li><a href="animais/animais.html">Animais</a></li>
             <li><a href="investidor/manual-do-investidor.html">Investidor</a></li>
