--- a/fetch/index.html
+++ b/fetch/index.html
@@ -9,6 +9,6 @@
 <body>
     <div id="img-dog"><button onclick="gerarImagem();">Gerar imagem</button>
     </div>
-    <script src="script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
