--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="cadastro/index.html">cadastro</a></li>
             <li><a href="tabelas-listas-frames-formularios/index.html">tabelas-listas-frames-formularios</a></li>
             <li><a href="curriculo/index.html">currículo</a></li>
+            <li><a href="fetch/index.html">Cachorros lokos</a></li>
         </ul>
     </div>
 </body>
